tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__961125_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/961125-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ":ab" [cir_private, default, align 1, dso_local, constant]

fn begfield(%arg0: s32i, %arg1: s8i*, %arg2: s8i*, %arg3: s32i, %arg4: s32i) -> s8i* [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i*, %arg2: s8i*, %arg3: s32i, %arg4: s32i):
        %23 = alloca s32i, "tab", align 4
        %24 = alloca s8i*, "ptr", align 8
        %25 = alloca s8i*, "lim", align 8
        %26 = alloca s32i, "sword", align 4
        %27 = alloca s32i, "schar", align 4
        %28 = alloca s8i*, "__retval", align 8
        store %arg0, %23
        store %arg1, %24
        store %arg2, %25
        store %arg3, %26
        store %arg4, %27
        scope {
            %39 = load %23 : s32i, align 4
            %40 = cast(int_to_bool) %39 : bool
            if %40 {
                scope {
                    while {
                        %62 = load %24 : s8i*, align 8
                        %63 = load %25 : s8i*, align 8
                        %64 = cmp lt %62, %63 : bool
                        %65 = ternary %64 ? { : bool
                            %67 = load %26 : s32i, align 4
                            %68 = dec %67 : s32i [nsw]
                            store %68, %26, align 4
                            %69 = cast(int_to_bool) %67 : bool
                            yield %69
                        } : {
                            %66 = const #false : bool
                            yield %66
                        }
                        condition %65
                    } do {
                        scope {
                            scope {
                                while {
                                    %52 = load %24 : s8i*, align 8
                                    %53 = load %25 : s8i*, align 8
                                    %54 = cmp lt %52, %53 : bool
                                    %55 = ternary %54 ? { : bool
                                        %57 = load %24 : s8i*, align 8
                                        %58 = load %57 : s8i, align 1
                                        %59 = cast(integral) %58 : s32i
                                        %60 = load %23 : s32i, align 4
                                        %61 = cmp ne %59, %60 : bool
                                        yield %61
                                    } : {
                                        %56 = const #false : bool
                                        yield %56
                                    }
                                    condition %55
                                } do {
                                    %49 = load %24 : s8i*, align 8
                                    %50 = const 1 : s32i
                                    %51 = ptr_stride %49, %50 : s8i*
                                    store %51, %24, align 8
                                    yield
                                }
                                yield
                            }
                            scope {
                                %43 = load %24 : s8i*, align 8
                                %44 = load %25 : s8i*, align 8
                                %45 = cmp lt %43, %44 : bool
                                if %45 {
                                    %46 = load %24 : s8i*, align 8
                                    %47 = const 1 : s32i
                                    %48 = ptr_stride %46, %47 : s8i*
                                    store %48, %24, align 8
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            } else {
                scope {
                    while {
                        %41 = const 1 : s32i
                        %42 = cast(int_to_bool) %41 : bool
                        condition %42
                    } do {
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        scope {
            %31 = load %24 : s8i*, align 8
            %32 = load %27 : s32i, align 4
            %33 = ptr_stride %31, %32 : s8i*
            %34 = load %25 : s8i*, align 8
            %35 = cmp le %33, %34 : bool
            if %35 {
                %36 = load %27 : s32i, align 4
                %37 = load %24 : s8i*, align 8
                %38 = ptr_stride %37, %36 : s8i*
                store %38, %24, align 8
                yield
            }
            yield
        }
        %29 = load %24 : s8i*, align 8
        store %29, %28
        %30 = load %28 : s8i*
        return %30
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i*, "s", align 8
    %2 = alloca s8i*, "lim", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @.str : s8i[4]*
    %5 = cast(array_to_ptrdecay) %4 : s8i*
    store %5, %1, align 8
    %6 = load %1 : s8i*, align 8
    %7 = const 3 : s32i
    %8 = ptr_stride %6, %7 : s8i*
    store %8, %2, align 8
    scope {
        %12 = const 58 : s32i
        %13 = load %1 : s8i*, align 8
        %14 = load %2 : s8i*, align 8
        %15 = const 1 : s32i
        %16 = const 1 : s32i
        %17 = call @begfield(%12, %13, %14, %15, %16) : s8i* [all]
        %18 = load %1 : s8i*, align 8
        %19 = const 2 : s32i
        %20 = ptr_stride %18, %19 : s8i*
        %21 = cmp ne %17, %20 : bool
        if %21 {
            %22 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %9 = get_global @exit : ((s32i) -> void)*
    %10 = const 0 : s32i
    call @exit(%10) [all]
    %11 = load %0 : s32i
    return %11
}
