tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__970214_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/970214-1.c" (c, x86_64-unknown-linux-gnu)
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 49 : s32i
    %4 = const 49 : s32i
    %5 = cmp ne %3, %4 : bool
    %6 = cast(bool_to_int) %5 : s32i
    call @exit(%6) [all]
    %7 = load %0 : s32i
    return %7
}
