tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__970214_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/970214-2.c" (c, x86_64-unknown-linux-gnu)
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 49 : s32i
    %4 = const 0 : s32i
    %5 = add %3, %4 : s32i [nsw]
    %6 = const 49 : s32i
    %7 = cmp ne %5, %6 : bool
    %8 = cast(bool_to_int) %7 : s32i
    call @exit(%8) [all]
    %9 = load %0 : s32i
    return %9
}
