tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__980505_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/980505-1.c" (c, x86_64-unknown-linux-gnu)
fn f(%arg0: s32i) -> s32i [internal, c, no_inline, const, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %23 = alloca s32i, "x", align 4
        %24 = alloca s32i, "__retval", align 4
        store %arg0, %23
        %25 = load %23 : s32i, align 4
        store %25, %24
        %26 = load %24 : s32i
        return %26
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "f1", align 4
    %2 = alloca s32i, "f2", align 4
    %3 = alloca s32i, "x", align 4
    %4 = const 0 : s32i
    store %4, %0
    %5 = const 1 : s32i
    store %5, %3, align 4
    %6 = load %3 : s32i, align 4
    %7 = call @f(%6) : s32i [const]
    store %7, %1, align 4
    %8 = const 2 : s32i
    store %8, %3, align 4
    %9 = load %3 : s32i, align 4
    %10 = call @f(%9) : s32i [const]
    store %10, %2, align 4
    scope {
        %14 = load %1 : s32i, align 4
        %15 = const 1 : s32i
        %16 = cmp ne %14, %15 : bool
        %17 = ternary %16 ? { : bool
            %22 = const #true : bool
            yield %22
        } : {
            %19 = load %2 : s32i, align 4
            %20 = const 2 : s32i
            %21 = cmp ne %19, %20 : bool
            yield %21
        }
        if %17 {
            %18 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %11 = get_global @exit : ((s32i) -> void)*
    %12 = const 0 : s32i
    call @exit(%12) [all]
    %13 = load %0 : s32i
    return %13
}
